<resources>
    <string name="app_name">AppEstacionamento</string>
    <string name="logar">Logar</string>
    <string name="eSenha">Esqueceu a senha?</string>
    <string name="numero">Numero </string>
    <string name="Setor">Setor </string>
    <string name="Numeovaga">Numero da Vaga</string>
    <string name="Email">Email</string>
    <string name="excluirvaga">Excluir Vaga</string>
    <string name="ConsulaVaga">Buscar Vaga </string>
    <string name="Enviar">Enviar</string>
    <string name="senha">Senha</string>
    <string name="Titulo">Titulo</string>
    <string name="buscarCpf">infrome o cpf ex: 111.111.111.11</string>
    <string name="nome">Nome</string>
    <string name="numerodavaga">Numero da Vaga</string>
    <string name="vagaespecial">Vaga para necessidade especial </string>
    <string name="cpf">cpf</string>
    <string name="telefone">Telefone</string>
    <string name="veiculo">Veiculo</string>
    <string name="vaga">Vaga</string>
    <string name="Buscar">Buscar</string>
    <string name="Tipo">Tipo</string>
    <string name="Cpf">Cpf</string>
    <string name="Status">Status</string>
    <string name="Inativar">Inativar</string>
    <string name="Ativo">Ativo</string>
    <string name="InativarP">Deseja Inativar o Usuário?</string>
    <string name="Atualizar">Atualizar</string>
    <string name="removerUsuario">REMOVER USUÁRIO</string>
    <string name="consultaUsuario">CONSULTAR USUÁRIO</string>
    <string name="buscarexcluir"> Digite numero da placa</string>
    <string name="inativaUsuario">INATIVAR USUÁRIO</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="excluir">Excluir</string>
    <string name="usuarioInativo">Usuario inativo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="adicionarUsuario">ADICIONAR USUÁRIO</string>
    <string name="adicionarVaga">Adicionar Vaga</string>
    <string name="removerVaga">Remover vaga</string>
    <string name="consultaVaga">Consultar vaga</string>
    <string name="placaVeiculo">Placa do Veículo</string>
    <string name="emailUsuarioDono">Email do dono do veículo</string>
    <string name="marcaVeiculo">Marca do veículo</string>
    <string name="modeloVaiculo">Modelo do veículo</string>
    <string name="corVeiculo">Cor do veiculo</string>
    <string name="adicionarVeiculo">Adicionar Veículo</string>
    <string name="removerVeiculo">Remover veículo</string>
    <string name="consultaVeiculo">Consulta Veículo</string>
    <string name="celular">Celular</string>
    <string name="modeloVeiculo">Modelo do Veiculo:</string>
    <string name="editar">Editar</string>
    <string name="Horas">6:00 - 22:00</string>
    <string name="Telefone_contato">3333-3333</string>
    <string name="email_para_contato">Email para contato:</string>
    <string name="horario_de_funcionamento">Horário de funcionamento:</string>
    <string name="email_hotel">Hotel@gmail.com</string>
    <string name="site_do_hotel">Site do hotel:</string>
    <string name="telefone_para_contato">Telefone para contato:</string>
    <string name="site_hotel">www.hotel.com.br</string>
    <string name="setor1">Setor 1</string>
    <string name="setor2">Setor 2</string>


</resources>
