<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <include android:id="@+id/toolbarId"
        layout="@layout/toolbar"

        />

    <ImageView
        android:id="@+id/hotelId_sobre"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:srcCompat="@drawable/hotel" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/telefone_para_contato"
        android:layout_marginTop="50sp"
        android:textSize="@dimen/TextSize"/>


    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Telefone_contato"
        android:layout_marginTop="5dp"
        android:textSize="@dimen/TextSize"
        android:layout_marginStart="30dp"
        />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email_para_contato"
        android:textSize="@dimen/TextSize"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/textView13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email_hotel"
        android:textSize="@dimen/TextSize"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/textView14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/site_do_hotel"
        android:textSize="@dimen/TextSize"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/site_hotel"
        android:textSize="@dimen/TextSize"
        android:layout_marginStart="30dp"
        />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/horario_de_funcionamento"
        android:textSize="@dimen/TextSize"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/textView17"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Horas"
        android:textSize="@dimen/TextSize"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"/>
</LinearLayout>