<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/backgroundView"
    >

    <include android:id="@+id/toolbarId"
        layout="@layout/toolbar"

        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical" android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:padding="25dp">

            <TextView
                android:id="@+id/text_EditarPlacaVeiculo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/placaVeiculo"
                android:textSize="@dimen/TextSize"

                />

            <EditText
                android:id="@+id/EditrplacaVeiculoId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:textAllCaps="true"
                android:background="@drawable/ovaltext"
                android:ems="10"
                android:inputType="text"
                android:padding="@dimen/paddingEditText"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="@dimen/TextSize" />

            <TextView
                android:id="@+id/EditartelefoneId_cadastro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/emailUsuarioDono"
                android:textSize="@dimen/TextSize" />

            <EditText
                android:id="@+id/EditarEmailDonoId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:background="@drawable/ovaltext"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:padding="@dimen/paddingEditText"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="@dimen/TextSize" />

            <TextView
                android:id="@+id/EditarTextMarcaVeiculo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/marcaVeiculo"
                android:textSize="@dimen/TextSize" />

            <Spinner
                android:layout_marginTop="5dp"
                android:id="@+id/EditarSpinnerMarcaVeiculo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/marcaVeiculo"
                />


            <TextView
                android:id="@+id/EditarTextModeloveiculo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/modeloVaiculo"
                android:textSize="@dimen/TextSize" />

            <EditText
                android:id="@+id/EditarModeloVeiculoId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:background="@drawable/ovaltext"
                android:ems="10"
                android:inputType="textPersonName"
                android:padding="@dimen/paddingEditText"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="@dimen/TextSize" />


            <TextView
                android:id="@+id/EditarTextCor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/corVeiculo"
                android:textSize="@dimen/TextSize" />

            <Spinner
                android:id="@+id/EditarSpinnerCorVeiculoId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:entries="@array/arrayCor" />



            <TextView
                android:id="@+id/EditarTipoId_cadastro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/TextSize"
                android:layout_marginTop="25dp"
                android:text="@string/Tipo" />


            <Spinner
                android:id="@+id/EditarSspinnerTipoVeiculo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:dropDownWidth="match_parent"
                android:entries="@array/spinnerTipoVeiculo" />


            <Button
                android:id="@+id/button_editarVeiculo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:background="@drawable/ovalbutton"
                android:text="@string/editar"
                android:textSize="@dimen/texxtViewSize" />

        </LinearLayout>

    </ScrollView>



</LinearLayout>
