<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include android:id="@+id/toolbarId"
        layout="@layout/toolbar" />

    <TextView
        android:id="@+id/meusdadosId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="Meus Dados"
        android:textAlignment="center"
        android:textSize="@dimen/TextSize" />

    <View
        android:id="@+id/BarraId"
        android:layout_width="300dp"
        android:layout_height="1dp"
        android:layout_below="@+id/TextView21"
        android:layout_gravity="center"
        android:background="#ccc"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/Numerovagaid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nome"
                android:textSize="@dimen/TextSize"
                />

            <TextView
                android:id="@+id/tv_nome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="@dimen/TextSize"
                android:layout_marginTop="5dp"/>

            <TextView
                android:id="@+id/telefoneId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/telefone"
                android:textSize="@dimen/TextSize"
                />

            <TextView
                android:id="@+id/tv_telefone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text=""
                android:textSize="@dimen/TextSize" />

            <TextView
                android:id="@+id/emailIdDados"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Email"
                android:layout_marginTop="5dp"
                android:textSize="@dimen/TextSize"/>

            <TextView
                android:id="@+id/tv_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="@dimen/TextSize"
                android:layout_marginTop="5dp"
                />


            <TextView
                android:id="@+id/statusId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Status"
                android:layout_marginTop="5dp"
                android:textSize="@dimen/TextSize"/>

            <TextView
                android:id="@+id/tv_Status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="@dimen/TextSize"
                android:layout_marginTop="5dp"
                />

            <TextView
                android:id="@+id/cpfId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cpf"
                android:layout_marginTop="5dp"
                android:textSize="@dimen/TextSize"/>

            <TextView
                android:id="@+id/tv_cpf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="@dimen/TextSize"
                android:layout_marginTop="5dp"
                />

            <TextView
                android:id="@+id/tipoId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Tipo"
                android:layout_marginTop="5dp"
                android:textSize="@dimen/TextSize"/>

            <TextView
                android:id="@+id/tv_Tipo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="@dimen/TextSize"
                android:layout_marginTop="5dp"
                />

        </LinearLayout>
    </ScrollView>


</LinearLayout>