<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerVertical="true">

    <TextView
        android:id="@+id/nomeid_cadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nome"
        android:layout_marginLeft="42dp"
        android:layout_marginTop="25dp"/>

    <EditText
        android:id="@+id/editnomeid_cadastro"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Nome"
        android:inputType="textPersonName"
        android:background="@drawable/ovaltext"
        android:layout_marginTop="5dp"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/telefoneId_cadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/telefone"
        android:layout_marginLeft="42dp"
        android:layout_marginTop="25dp"/>

    <EditText
        android:id="@+id/edittelefoneid_cadastro"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Telefone"
        android:inputType="number"
        android:background="@drawable/ovaltext"
        android:layout_marginTop="5dp"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/emailId_cadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Email"
        android:layout_marginLeft="42dp"
        android:layout_marginTop="25dp"/>

    <EditText
        android:id="@+id/editemailid_cadastro"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Email"
        android:inputType="textPersonName"
        android:background="@drawable/ovaltext"
        android:layout_marginTop="5dp"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/TipoId_cadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Tipo"
        android:layout_marginLeft="42dp"
        android:layout_marginTop="25dp"/>

    <EditText
        android:id="@+id/editTipoid_cadastro"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Tipo"
        android:inputType="textPersonName"
        android:background="@drawable/ovaltext"
        android:layout_marginTop="5dp"
        android:layout_gravity="center"/>
    <TextView
        android:id="@+id/cpfId_cadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Cpf"
        android:layout_marginLeft="42dp"
        android:layout_marginTop="25dp"/>

    <EditText
        android:id="@+id/editCpfId_cadastro"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="CPF"
        android:inputType="number"
        android:background="@drawable/ovaltext"
        android:layout_marginTop="5dp"
        android:layout_gravity="center"/>

    <CheckBox
        android:id="@+id/checkBox_cadastro"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="Possui Necessidade Especial?"
        android:layout_marginTop="25dp"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/button_cadastro"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="Cadastrar"
        android:layout_marginTop="25dp"
        android:layout_gravity="center"
        android:background="@drawable/ovalbutton"/>

</LinearLayout>