<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/backgroundView"
    >

    <include android:id="@+id/toolbarId"
        layout="@layout/toolbar"

        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:orientation="vertical"
            android:padding="25dp">

            <TextView
                android:id="@+id/nomeid_cadastro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nome"
                android:textSize="@dimen/TextSize"

                />

            <EditText
                android:id="@+id/editNomeid_editadado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:background="@drawable/ovaltext"
                android:ems="10"
                android:inputType="textPersonName"
                android:padding="@dimen/paddingEditText"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="@dimen/TextSize" />

            <TextView
                android:id="@+id/telefoneId_cadastro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/celular"
                android:textSize="@dimen/TextSize" />

            <EditText
                android:id="@+id/editTelefoneid_editadado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:background="@drawable/ovaltext"
                android:ems="10"
                android:inputType="number"
                android:padding="@dimen/paddingEditText"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="@dimen/TextSize" />


            <TextView
                android:id="@+id/cpfText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/Cpf"
                android:textSize="@dimen/TextSize" />

            <EditText
                android:id="@+id/editTextCpfEditaUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:background="@drawable/ovaltext"
                android:ems="10"
                android:inputType="numberSigned"
                android:padding="@dimen/paddingEditText"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="@dimen/TextSize" />


            <TextView
                android:id="@+id/TipoId_cadastro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/Tipo"
                android:textSize="@dimen/TextSize" />


            <Spinner
                android:id="@+id/editTipo_editadados"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:dropDownWidth="match_parent"
                android:entries="@array/spinnerTipo" />

            <Button
                android:id="@+id/buttonAtualizarUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:background="@drawable/ovalbutton"
                android:text="@string/Atualizar"
                android:textSize="@dimen/texxtViewSize" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
