<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include android:id="@+id/toolbarId"
        layout="@layout/toolbar" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="Dados"
        android:textSize="@dimen/TextSize"
        android:textAlignment="center"/>
    <view
        android:id="@+id/BarraId"
        android:layout_width="300dp"
        android:layout_height="1dp"
        android:layout_below="@+id/TextView21"
        android:layout_gravity="center"
        android:background="#ccc"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/Numerovagaid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Numeovaga"
                android:textSize="@dimen/TextSize"
                />

            <TextView
                android:id="@+id/numerovaga_preencher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="@dimen/TextSize"
                android:layout_marginTop="5dp"/>

            <TextView
                android:id="@+id/setorvagaid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Setor"
                android:layout_marginTop="5dp"
                android:textSize="@dimen/TextSize"
                />

            <TextView
                android:id="@+id/setorpreencherid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="@dimen/TextSize"
                android:layout_marginTop="5dp"/>

            <TextView
                android:id="@+id/statusvagaid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/Status"
                android:textSize="@dimen/TextSize"/>

            <TextView
                android:id="@+id/statuspreencher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="@dimen/TextSize"
                android:layout_marginTop="5dp"
                />

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Trocar Status"
                android:layout_marginTop="20dp"
                android:textSize="@dimen/texxtViewSize"/>

            <Button
                android:id="@+id/buttonatualizarvaga"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Atualizar"
                android:background="@drawable/ovalbutton"
                android:layout_marginTop="20dp"/>
        </LinearLayout>
    </ScrollView>


</LinearLayout>